Refactored the heap dump on OOME for daemon. I made it simpler - it's just one of the default jvm args now. Also, client can overwrite it if he wants using standard way of setting jvm args for the daemon.